--- a/02-Structural/02-04-composite/02-04-Composite-Pattern.ipynb
+++ b/02-Structural/02-04-composite/02-04-Composite-Pattern.ipynb
@@ -62,33 +62,219 @@
     "\n",
     "**Domain:** Agile-Scrum\n",
     "\n",
-    "**Problem:** Refere below chat between Product Owner() and Architect()\n",
+    "**Problem Statement:** We need to find a way to calculate the total story points for a project\n",
     "\n",
-    "\n"
+    "A project contains Epics and user stories. A project may contain a user story directly also without an Epic.\n",
+    "We are going to calulate total story points(34) for below hierarchy/tree structure\n",
+    "\n",
+    "<img src=\".\\assets\\project-tree.png\" alt=\"Software Design Patterns\" style=\"zoom:80%;\" />\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Solution - Without Composite Pattern"
+    "#### Solution - No Pattern"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\".\\assets\\no-pattern.png\" alt=\"Software Design Patterns\" style=\"zoom:80%;\" />\n",
+    "\n",
+    "\n",
+    "We have three classes(Project, Epic and UserStory). Project contains separate list of Epic and User Story. Also, there are different methods for adding/removing each type(Epic/UserStory). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " class NoComposite\n",
+    "    {\n",
+    "        public void Run()\n",
+    "        {\n",
+    "            /*\n",
+    "             * Project\n",
+    "             *      |\n",
+    "             *      |-----Epic-1\n",
+    "             *      |       |\n",
+    "             *      |       |----US-1(5)\n",
+    "             *      |       |\n",
+    "             *      |       |----US-2(8)\n",
+    "             *      |\n",
+    "             *      |-----Epic-2\n",
+    "             *      |       |\n",
+    "             *      |       |----US-3(3)\n",
+    "             *      |       |\n",
+    "             *      |       |----US-4(8)\n",
+    "             *      |       \n",
+    "             *      |\n",
+    "             *      |----US-5(2)\n",
+    "             *      |\n",
+    "             *      |----US-6(8)\n",
+    "             *\n",
+    "             * Total story points in a project: 34\n",
+    "             */\n",
+    "\n",
+    "            // User stories\n",
+    "            var us1 = new UserStory(5);\n",
+    "            var us2 = new UserStory(8);\n",
+    "            var us3 = new UserStory(3);\n",
+    "            var us4 = new UserStory(8);\n",
+    "            var us5 = new UserStory(2);\n",
+    "            var us6 = new UserStory(8);\n",
+    "\n",
+    "            // Epics\n",
+    "            var epic1 = new Epic();\n",
+    "            epic1.AddUserStory(us1);\n",
+    "            epic1.AddUserStory(us2);\n",
+    "\n",
+    "            var epic2 = new Epic();\n",
+    "            epic2.AddUserStory(us3);\n",
+    "            epic2.AddUserStory(us4);\n",
+    "\n",
+    "            // Project\n",
+    "            var project = new Project();\n",
+    "            project.AddEpic(epic1);\n",
+    "            project.AddEpic(epic2);\n",
+    "            project.AddUserStory(us5);\n",
+    "            project.AddUserStory(us6);\n",
+    "\n",
+    "            // Calculate total sum, it should be 34\n",
+    "            var result = project.CalculateStoryPoints();\n",
+    "            Console.WriteLine($\"Total number of story points in a Project is {result}\");\n",
+    "        }\n",
+    "\n",
+    "        class UserStory\n",
+    "        {\n",
+    "            private int _storyPoints;\n",
+    "\n",
+    "            public UserStory(int storyPoints)\n",
+    "            {\n",
+    "                _storyPoints = storyPoints;\n",
+    "            }\n",
+    "\n",
+    "            public int CalculateStoryPoints()\n",
+    "            {\n",
+    "                return _storyPoints;\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        class Epic\n",
+    "        {\n",
+    "            private readonly List<UserStory> _userStories;\n",
+    "            private int _storyPoints;\n",
+    "\n",
+    "            public Epic()\n",
+    "            {\n",
+    "                _userStories = new List<UserStory>();\n",
+    "            }\n",
+    "\n",
+    "            public int CalculateStoryPoints()\n",
+    "            {\n",
+    "                foreach (var userStory in _userStories)\n",
+    "                {\n",
+    "                    _storyPoints += userStory.CalculateStoryPoints();\n",
+    "                }\n",
+    "\n",
+    "                return _storyPoints;\n",
+    "            }\n",
+    "\n",
+    "            public void AddUserStory(UserStory userStory)\n",
+    "            {\n",
+    "                _userStories.Add(userStory);\n",
+    "            }\n",
+    "\n",
+    "            public void RemoveUserStory(UserStory userStory)\n",
+    "            {\n",
+    "                _userStories.Remove(userStory);\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        class Project\n",
+    "        {\n",
+    "            private readonly List<UserStory> _userStories;\n",
+    "            private readonly List<Epic> _epics;\n",
+    "            private int _storyPoints;\n",
+    "\n",
+    "            public Project()\n",
+    "            {\n",
+    "                _userStories = new List<UserStory>();\n",
+    "                _epics = new List<Epic>();\n",
+    "            }\n",
+    "\n",
+    "            public int CalculateStoryPoints()\n",
+    "            {\n",
+    "                // Add story points from all the user stories\n",
+    "                foreach (var userStory in _userStories)\n",
+    "                {\n",
+    "                    _storyPoints += userStory.CalculateStoryPoints();\n",
+    "                }\n",
+    "\n",
+    "                // Add story points from all the epics\n",
+    "                foreach (var epic in _epics)\n",
+    "                {\n",
+    "                    _storyPoints += epic.CalculateStoryPoints();\n",
+    "                }\n",
+    "\n",
+    "                return _storyPoints;\n",
+    "            }\n",
+    "\n",
+    "            public void AddUserStory(UserStory userStory)\n",
+    "            {\n",
+    "                _userStories.Add(userStory);\n",
+    "            }\n",
+    "\n",
+    "            public void RemoveUserStory(UserStory userStory)\n",
+    "            {\n",
+    "                _userStories.Remove(userStory);\n",
+    "            }\n",
+    "\n",
+    "            public void AddEpic(Epic epic)\n",
+    "            {\n",
+    "                _epics.Add(epic);\n",
+    "            }\n",
+    "\n",
+    "            public void RemoveEpic(Epic epic)\n",
+    "            {\n",
+    "                _epics.Remove(epic);\n",
+    "            }\n",
+    "        }\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "Unhandled exception",
-     "evalue": "(1,1): error CS0103: The name 'Code' does not exist in the current context",
-     "output_type": "error",
-     "traceback": [
-      "(1,1): error CS0103: The name 'Code' does not exist in the current context"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of story points in a Project is 34\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "var noComposite = new NoComposite();\n",
+    "noComposite.Run();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Issues with above solution**\n",
+    "- Tight coupling between Project and Epic/UserStory\n",
+    "- Add/Remove methods for each type(Epic/UserStory)\n",
+    "- Open Closed Principle(OCP) violation. If a new type(Features) gets introduced, we need to modify Project class implementation and write Add/Remove methods separately.\n",
+    "- Addition of new type in CalculateStoryPoints() method."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,32 +287,184 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chat"
+    "<img src=\".\\assets\\composite-pattern-class.png\" alt=\"Software Design Patterns\" style=\"zoom:80%;\" />\n",
+    "\n",
+    "As seen above, this is a general solution with no coupling. IScrumComponent is the interface to be implemented by all elements within a tree.\n",
+    "Add/Remove methods have been generalized as well. If a new type gets introduced, it just needs to be inherited from IScrumComponent and things will work. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface IScrumComponent\n",
+    "{\n",
+    "    int CalculateStoryPoints();\n",
+    "}\n",
+    "\n",
+    "class WithComposite\n",
+    "{\n",
+    "    public void Run()\n",
+    "    {\n",
+    "        /*\n",
+    "         * Project\n",
+    "         *      |\n",
+    "         *      |-----Epic-1\n",
+    "         *      |       |\n",
+    "         *      |       |----US-1(5)\n",
+    "         *      |       |\n",
+    "         *      |       |----US-2(8)\n",
+    "         *      |\n",
+    "         *      |-----Epic-2\n",
+    "         *      |       |\n",
+    "         *      |       |----US-3(3)\n",
+    "         *      |       |\n",
+    "         *      |       |----US-4(8)\n",
+    "         *      |       \n",
+    "         *      |\n",
+    "         *      |----US-5(2)\n",
+    "         *      |\n",
+    "         *      |----US-6(8)\n",
+    "         *\n",
+    "         * Total story points in a project: 34\n",
+    "         */\n",
+    "\n",
+    "        // User stories\n",
+    "        var us1 = new UserStory(5);\n",
+    "        var us2 = new UserStory(8);\n",
+    "        var us3 = new UserStory(3);\n",
+    "        var us4 = new UserStory(8);\n",
+    "        var us5 = new UserStory(2);\n",
+    "        var us6 = new UserStory(8);\n",
+    "\n",
+    "        // Epics\n",
+    "        var epic1 = new Epic();\n",
+    "        epic1.AddComponent(us1);\n",
+    "        epic1.AddComponent(us2);\n",
+    "\n",
+    "        var epic2 = new Epic();\n",
+    "        epic2.AddComponent(us3);\n",
+    "        epic2.AddComponent(us4);\n",
+    "\n",
+    "        // Project\n",
+    "        var project = new Project();\n",
+    "        project.AddComponent(epic1);\n",
+    "        project.AddComponent(epic2);\n",
+    "        project.AddComponent(us5);\n",
+    "        project.AddComponent(us6);\n",
+    "\n",
+    "        // Calculate total sum, it should be 34\n",
+    "        var result = project.CalculateStoryPoints();\n",
+    "        Console.WriteLine($\"Total number of story points in a Project is {result}\");\n",
+    "    }\n",
+    "\n",
+    "    class UserStory : IScrumComponent\n",
+    "    {\n",
+    "        private int _storyPoints;\n",
+    "\n",
+    "        public UserStory(int storyPoints)\n",
+    "        {\n",
+    "            _storyPoints = storyPoints;\n",
+    "        }\n",
+    "\n",
+    "        public int CalculateStoryPoints()\n",
+    "        {\n",
+    "            return _storyPoints;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    class Epic : IScrumComponent\n",
+    "    {\n",
+    "        private readonly List<IScrumComponent> _components;\n",
+    "        private int _storyPoints;\n",
+    "\n",
+    "        public Epic()\n",
+    "        {\n",
+    "            _components = new List<IScrumComponent>();\n",
+    "        }\n",
+    "\n",
+    "        public int CalculateStoryPoints()\n",
+    "        {\n",
+    "            foreach (var component in _components)\n",
+    "            {\n",
+    "                _storyPoints += component.CalculateStoryPoints();\n",
+    "            }\n",
+    "\n",
+    "            return _storyPoints;\n",
+    "        }\n",
+    "\n",
+    "        public void AddComponent(IScrumComponent component)\n",
+    "        {\n",
+    "            _components.Add(component);\n",
+    "        }\n",
+    "\n",
+    "        public void RemoveComponent(IScrumComponent component)\n",
+    "        {\n",
+    "            _components.Remove(component);\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    class Project\n",
+    "    {\n",
+    "        private readonly List<IScrumComponent> _components;\n",
+    "        private int _storyPoints;\n",
+    "\n",
+    "        public Project()\n",
+    "        {\n",
+    "            _components = new List<IScrumComponent>();\n",
+    "        }\n",
+    "\n",
+    "        public int CalculateStoryPoints()\n",
+    "        {\n",
+    "            // Add story points from all the user stories\n",
+    "            foreach (var component in _components)\n",
+    "            {\n",
+    "                _storyPoints += component.CalculateStoryPoints();\n",
+    "            }\n",
+    "\n",
+    "            return _storyPoints;\n",
+    "        }\n",
+    "\n",
+    "        public void AddComponent(IScrumComponent component)\n",
+    "        {\n",
+    "            _components.Add(component);\n",
+    "        }\n",
+    "\n",
+    "        public void RemoveComponent(IScrumComponent component)\n",
+    "        {\n",
+    "            _components.Remove(component);\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "Unhandled exception",
-     "evalue": "(1,1): error CS0103: The name 'Code' does not exist in the current context",
-     "output_type": "error",
-     "traceback": [
-      "(1,1): error CS0103: The name 'Code' does not exist in the current context"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of story points in a Project is 34\n"
      ]
     }
    ],
    "source": [
-    "Code"
+    "var withComposite = new WithComposite();\n",
+    "withComposite.Run();"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use Case"
+    "### Comparison - Class Diagrams\n",
+    "\n",
+    "<img src=\".\\assets\\composite-vs-no-composite.png\" alt=\"Software Design Patterns\" style=\"zoom:80%;\" />"
    ]
   },
   {
@@ -135,7 +473,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "Composite design pattern is very useful in simplifying the complexity involved in a hierarchial/tree structure. It reduces the maintainance by a great extent. I tried to keep the post as problem-solution approach with less of theory. \n",
+    "Composite design pattern is very useful in simplifying the complexity involved in a hierarchial/tree structure. It reduces the maintainance by a great extent. \n",
     "\n",
     "Please share your feedback as it'll encourage me to write more.\n",
     "\n",
@@ -145,11 +483,6 @@
     "\n",
     "Blog: praveenraghuvanshi.github.io"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -164,6 +497,9 @@
    "name": "C#",
    "pygments_lexer": "csharp",
    "version": "8.0"
+  },
+  "nteract": {
+   "version": "0.23.3"
   }
  },
  "nbformat": 4,
